nginx/nginx-exporter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nginx
  name: nginx-exporter
  labels:
    app: nginx-exporter
spec:
  type: ClusterIP
  selector:
    app: nginx-exporter
  ports:
    - name: http-metrics
      port: 9113
      targetPort: 9113
